--- a/vsVcxproj/vs2012/xTraderManage.vcxproj
+++ b/vsVcxproj/vs2012/xTraderManage.vcxproj
@@ -11,12 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\xTraderManage\ITraderManage.h" />
-    <ClInclude Include="..\..\xTraderManage\ITraderSpi.h" />
-    <ClInclude Include="..\..\xTraderManage\TraderManage.h" />
+    <ClCompile Include="..\..\xTraderManage\Source\TraderManage.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\xTraderManage\TraderManage.cpp" />
+    <ClInclude Include="..\..\xTraderManage\Interface\ITraderManage.h" />
+    <ClInclude Include="..\..\xTraderManage\Interface\ITraderSpi.h" />
+    <ClInclude Include="..\..\xTraderManage\Source\TraderManage.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B18CF606-20CB-441D-8F03-BD142CBE5527}</ProjectGuid>
@@ -49,6 +49,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>../../Include/;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)Bin\</OutDir>
+    <IntDir>$(Configuration)\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -59,12 +62,14 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>X_DLL_EXPORTS;WIN32;_DEBUG;_WINDOWS;_USRDLL;XTRADERMANAGE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;XTRADERMANAGE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ImportLibrary>$(SolutionDir)\Lib\$(TargetName).lib</ImportLibrary>
+      <ProgramDatabaseFile>$(SolutionDir)\Bin\$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
